--- a/SimpleSite/templates/index.html
+++ b/SimpleSite/templates/index.html
@@ -434,11 +434,9 @@
             <option value="ZAR">ZAR</option>
             <option value="ZMW">ZMW</option>
         </select>
-            <input type="submit" value="GO"/>
-            <p><input name="incity" placeholder="from" type="text"/></p>
-            <p><input name="outcity" placeholder="to" type="text"/></p>
+            <p><input name="city" placeholder="Enter city" type="text"/></p>
             <p>
-                <select name="day">
+                <select name="inday">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -472,7 +470,7 @@
                     <option value="31">31</option>
                 </select>
             </p>
-                <select name="month">
+                <select name="inmonth">
                     <option value="01">January</option>
                     <option value="02">February</option>
                     <option value="03">March</option>
@@ -486,8 +484,66 @@
                     <option value="11">November</option>
                     <option value="12">December</option>
                 </select>
+            <input name="inyear" placeholder="Enter year" type="text"/>
+            <p>
+                <select name="outday">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                </select>
+            </p>
+                <select name="outmonth">
+                    <option value="01">January</option>
+                    <option value="02">February</option>
+                    <option value="03">March</option>
+                    <option value="04">April</option>
+                    <option value="05">May</option>
+                    <option value="06">June</option>
+                    <option value="07">July</option>
+                    <option value="08">August</option>
+                    <option value="09">September</option>
+                    <option value="10">October</option>
+                    <option value="11">November</option>
+                    <option value="12">December</option>
+                </select>
+            <p>
+                <select name="resort_type">
+                    <option value="cultural resorts">Cultural Resort</option>
+                    <option value="sea resorts">Sea Resort</option>
+                    <option value="ski resorts">Ski Resort</option>
+                </select>
+            </p>
 
-            <input name="year" placeholder="Enter year" type="text"/>
+            <input name="outyear" placeholder="Enter year" type="text"/>
+            <input type="submit" value="GO"/>
         </form>
     </body>
 </html>
