--- a/SimpleSite/templates/index.html
+++ b/SimpleSite/templates/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="py-5 text-center">
         <img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png" alt="" width="72" height="72">
-          <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+          <p class="lead">This is a coursework of Programming Basics by Shakhov Mykhailo And Ihor Titov</p>
       </div>
     </div>
 
