--- a/SimpleSite/templates/tickets.html
+++ b/SimpleSite/templates/tickets.html
@@ -56,12 +56,9 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Album example</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-      <p>
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-      </p>
+      <h1 class="jumbotron-heading">Tickets For Transport</h1>
+      <p class="lead text-muted">There Are Tickets And Link for Omio.com</p>
+
     </div>
   </section>
 
@@ -90,9 +87,9 @@
                           Go To Omio
                       </a>
                   </button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+
                 </div>
-                <small class="text-muted">9 mins</small>
+
               </div>
             </div>
           </div>
@@ -104,7 +101,14 @@
   </div>
 
 </main>
-
+ <footer class="my-5 pt-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2019-2020 OP Coursework</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">Privacy</a></li>
+      <li class="list-inline-item"><a href="#">Terms</a></li>
+      <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+  </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.3.1/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
