--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a href="http://127.0.0.1:5000/" class="nav-link">Home</a>
+                  <a href="#" class="nav-link">Home</a>
                 </li>
               </ul>
             </div>
