--- a/templates/map.html
+++ b/templates/map.html
@@ -2,11 +2,11 @@
 <head>    
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <script>L_PREFER_CANVAS=false; L_NO_TOUCH=false; L_DISABLE_3D=false;</script>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.4.0/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.3.4/dist/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.4.0/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.3.4/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"/>
@@ -17,7 +17,7 @@
     
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>#map_f0780206fdcf4ba1a98182bf979cb4ac {
+    <style>#map_e2a17ee5ed724c6594d8a48c2c3cb3b3 {
         position: relative;
         width: 100.0%;
         height: 100.0%;
@@ -28,7 +28,7 @@
 </head>
 <body>    
     
-    <div class="folium-map" id="map_f0780206fdcf4ba1a98182bf979cb4ac" ></div>
+    <div class="folium-map" id="map_e2a17ee5ed724c6594d8a48c2c3cb3b3" ></div>
 </body>
 <script>    
     
@@ -36,9 +36,9 @@
         var bounds = null;
     
 
-    var map_f0780206fdcf4ba1a98182bf979cb4ac = L.map(
-        'map_f0780206fdcf4ba1a98182bf979cb4ac', {
-        center: [50.0874654, 14.4212535],
+    var map_e2a17ee5ed724c6594d8a48c2c3cb3b3 = L.map(
+        'map_e2a17ee5ed724c6594d8a48c2c3cb3b3', {
+        center: [38.71667, -9.13333],
         zoom: 12,
         maxBounds: bounds,
         layers: [],
@@ -47,10 +47,10 @@
         zoomControl: true,
         });
 
-
     
-    var tile_layer_1c2768cc351840c2af9628167bb73cbd = L.tileLayer(
-        'https://stamen-tiles-{s}.a.ssl.fastly.net/terrain/{z}/{x}/{y}.jpg',
+    
+    var tile_layer_ac72e6c418f6464ca326ab828ca71aad = L.tileLayer(
+        'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         {
         "attribution": null,
         "detectRetina": false,
@@ -61,71 +61,37 @@
         "opacity": 1,
         "subdomains": "abc",
         "tms": false
-}).addTo(map_f0780206fdcf4ba1a98182bf979cb4ac);
+}).addTo(map_e2a17ee5ed724c6594d8a48c2c3cb3b3);
     
-        var marker_70dae6b274ff438fa750a51a77ef0612 = L.marker(
-            [49, 24],
+        var marker_8eef98559a2346fba0a2e3327e60d527 = L.marker(
+            [38.71667, -9.13333],
             {
-                icon: new L.Icon.Default(),
+                icon: new L.Icon.Default()
                 }
-            ).addTo(map_f0780206fdcf4ba1a98182bf979cb4ac);
+            ).addTo(map_e2a17ee5ed724c6594d8a48c2c3cb3b3);
         
     
 
-                var icon_2e7f563c62314bbb8ad33f6a5d6fe704 = L.AwesomeMarkers.icon({
+                var icon_b3b02e641a3d46b6b92d0ccb34cdbc04 = L.AwesomeMarkers.icon({
                     icon: 'cloud',
                     iconColor: 'white',
                     markerColor: 'blue',
                     prefix: 'glyphicon',
                     extraClasses: 'fa-rotate-0'
                     });
-                marker_70dae6b274ff438fa750a51a77ef0612.setIcon(icon_2e7f563c62314bbb8ad33f6a5d6fe704);
+                marker_8eef98559a2346fba0a2e3327e60d527.setIcon(icon_b3b02e641a3d46b6b92d0ccb34cdbc04);
             
     
-            var popup_5a0abd11d47749aba2f2ba724638f3f0 = L.popup({maxWidth: '100%'
+            var popup_28a0f75492024f9f9c058623ebc411df = L.popup({maxWidth: '300'
             
             });
 
             
-                var html_9071628aae5845d1b173cc303a293c4b = $(`<div id="html_9071628aae5845d1b173cc303a293c4b" style="width: 100.0%; height: 100.0%;">Lviv</div>`)[0];
-                popup_5a0abd11d47749aba2f2ba724638f3f0.setContent(html_9071628aae5845d1b173cc303a293c4b);
+                var html_cc71c1fb068446ba8b1e80382290265c = $(`<div id="html_cc71c1fb068446ba8b1e80382290265c" style="width: 100.0%; height: 100.0%;">Lisbon</div>`)[0];
+                popup_28a0f75492024f9f9c058623ebc411df.setContent(html_cc71c1fb068446ba8b1e80382290265c);
             
 
-            marker_70dae6b274ff438fa750a51a77ef0612.bindPopup(popup_5a0abd11d47749aba2f2ba724638f3f0)
-            ;
-
-            
-        
-    
-        var marker_082f019584d24848b1905d93ac710a5a = L.marker(
-            [50, 14],
-            {
-                icon: new L.Icon.Default(),
-                }
-            ).addTo(map_f0780206fdcf4ba1a98182bf979cb4ac);
-        
-    
-
-                var icon_43e3d29c049f4bf29dc1deb7172fffdf = L.AwesomeMarkers.icon({
-                    icon: 'cloud',
-                    iconColor: 'white',
-                    markerColor: 'blue',
-                    prefix: 'glyphicon',
-                    extraClasses: 'fa-rotate-0'
-                    });
-                marker_082f019584d24848b1905d93ac710a5a.setIcon(icon_43e3d29c049f4bf29dc1deb7172fffdf);
-            
-    
-            var popup_90b9e3052b2740ac98f5308ae7a458b5 = L.popup({maxWidth: '100%'
-            
-            });
-
-            
-                var html_b190451055f44629b12259b3629edcae = $(`<div id="html_b190451055f44629b12259b3629edcae" style="width: 100.0%; height: 100.0%;">Prague</div>`)[0];
-                popup_90b9e3052b2740ac98f5308ae7a458b5.setContent(html_b190451055f44629b12259b3629edcae);
-            
-
-            marker_082f019584d24848b1905d93ac710a5a.bindPopup(popup_90b9e3052b2740ac98f5308ae7a458b5)
+            marker_8eef98559a2346fba0a2e3327e60d527.bindPopup(popup_28a0f75492024f9f9c058623ebc411df)
             ;
 
             
