--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -70,15 +70,15 @@
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
             <picture>
-                <img src="https://i.pinimg.com/originals/58/b5/7b/58b57b6f9627ff9b0b7b5c3cdfb93004.jpg" class="img-fluid img-thumbnail">
+                <img src="https://cdn1.iconfinder.com/data/icons/office-and-business-14/48/4-512.png" class="img-fluid img-thumbnail">
             </picture>
             <div class="card-body">
               <p class="card-text">
-                  {{ ticket["Departure time"] }}  -  {{ ticket["Arrival Time"] }}
-                  {{ ticket["Departure station"] }}, {{ ticket["Departure city"] }} - {{ ticket["Arrival station"] }}, {{ ticket["Arrival city"] }}
-                  Price - {{ ticket["Price"] }}
-                  Mode - {{ ticket["Trasnport"] }}
-                  Company - {{ ticket["Company"] }}
+                  <p class="lead">{{ ticket["Departure time"] }} - {{ ticket["Arrival time"] }}</p>
+                  <p>{{ ticket["Departure station"] }}, {{ ticket["Departure city"] }} - {{ ticket["Arrival station"] }}, {{ ticket["Arrival city"] }}</p>
+                  <p>Price - {{ ticket["Price"] }}</p>
+                  <p>Mode - {{ ticket["Transport"] }}</p>
+                  <p>Company - {{ ticket["Company:"] }}</p>
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
@@ -111,7 +111,7 @@
   </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/docs/4.3.1/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+{#<script>window.jQuery || document.write('<script src="/docs/4.3.1/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="/docs/4.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>#}
 
 </body>
 </html>
