--- a/templates/map.html
+++ b/templates/map.html
@@ -17,7 +17,7 @@
     
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>#map_e2a17ee5ed724c6594d8a48c2c3cb3b3 {
+    <style>#map_9d36dc4154f346368079114a96acf2a9 {
         position: relative;
         width: 100.0%;
         height: 100.0%;
@@ -28,7 +28,7 @@
 </head>
 <body>    
     
-    <div class="folium-map" id="map_e2a17ee5ed724c6594d8a48c2c3cb3b3" ></div>
+    <div class="folium-map" id="map_9d36dc4154f346368079114a96acf2a9" ></div>
 </body>
 <script>    
     
@@ -36,9 +36,9 @@
         var bounds = null;
     
 
-    var map_e2a17ee5ed724c6594d8a48c2c3cb3b3 = L.map(
-        'map_e2a17ee5ed724c6594d8a48c2c3cb3b3', {
-        center: [38.71667, -9.13333],
+    var map_9d36dc4154f346368079114a96acf2a9 = L.map(
+        'map_9d36dc4154f346368079114a96acf2a9', {
+        center: [52.22977, 21.01178],
         zoom: 12,
         maxBounds: bounds,
         layers: [],
@@ -49,7 +49,7 @@
 
     
     
-    var tile_layer_ac72e6c418f6464ca326ab828ca71aad = L.tileLayer(
+    var tile_layer_765e1149775945f893b8cacd4c734092 = L.tileLayer(
         'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         {
         "attribution": null,
@@ -61,37 +61,37 @@
         "opacity": 1,
         "subdomains": "abc",
         "tms": false
-}).addTo(map_e2a17ee5ed724c6594d8a48c2c3cb3b3);
+}).addTo(map_9d36dc4154f346368079114a96acf2a9);
     
-        var marker_8eef98559a2346fba0a2e3327e60d527 = L.marker(
-            [38.71667, -9.13333],
+        var marker_24ebe54668504699b3cb4a0952a929f0 = L.marker(
+            [52.22977, 21.01178],
             {
                 icon: new L.Icon.Default()
                 }
-            ).addTo(map_e2a17ee5ed724c6594d8a48c2c3cb3b3);
+            ).addTo(map_9d36dc4154f346368079114a96acf2a9);
         
     
 
-                var icon_b3b02e641a3d46b6b92d0ccb34cdbc04 = L.AwesomeMarkers.icon({
+                var icon_e8db21ba52654456928fa12a6b31742c = L.AwesomeMarkers.icon({
                     icon: 'cloud',
                     iconColor: 'white',
                     markerColor: 'blue',
                     prefix: 'glyphicon',
                     extraClasses: 'fa-rotate-0'
                     });
-                marker_8eef98559a2346fba0a2e3327e60d527.setIcon(icon_b3b02e641a3d46b6b92d0ccb34cdbc04);
+                marker_24ebe54668504699b3cb4a0952a929f0.setIcon(icon_e8db21ba52654456928fa12a6b31742c);
             
     
-            var popup_28a0f75492024f9f9c058623ebc411df = L.popup({maxWidth: '300'
+            var popup_a7f0ea488f9542bc9d4b710e0738ea58 = L.popup({maxWidth: '300'
             
             });
 
             
-                var html_cc71c1fb068446ba8b1e80382290265c = $(`<div id="html_cc71c1fb068446ba8b1e80382290265c" style="width: 100.0%; height: 100.0%;">Lisbon</div>`)[0];
-                popup_28a0f75492024f9f9c058623ebc411df.setContent(html_cc71c1fb068446ba8b1e80382290265c);
+                var html_c25aebc927d6481b9af9f4a6c698f30d = $(`<div id="html_c25aebc927d6481b9af9f4a6c698f30d" style="width: 100.0%; height: 100.0%;">Warsaw</div>`)[0];
+                popup_a7f0ea488f9542bc9d4b710e0738ea58.setContent(html_c25aebc927d6481b9af9f4a6c698f30d);
             
 
-            marker_8eef98559a2346fba0a2e3327e60d527.bindPopup(popup_28a0f75492024f9f9c058623ebc411df)
+            marker_24ebe54668504699b3cb4a0952a929f0.bindPopup(popup_a7f0ea488f9542bc9d4b710e0738ea58)
             ;
 
             
