--- a/templates/propositions.html
+++ b/templates/propositions.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Пример на bootstrap 4: Простой одностраничный шаблон для фотогалереи, портфолио и многого другого.">
+    <meta name="description" content="">
 
     <title>Places | Resorts</title>
 
