--- a/templates/map.html
+++ b/templates/map.html
@@ -17,7 +17,7 @@
     
     <meta name="viewport" content="width=device-width,
         initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>#map_9d36dc4154f346368079114a96acf2a9 {
+    <style>#map_2afeecfffc864ab4a086b4b7cffcde9f {
         position: relative;
         width: 100.0%;
         height: 100.0%;
@@ -28,7 +28,7 @@
 </head>
 <body>    
     
-    <div class="folium-map" id="map_9d36dc4154f346368079114a96acf2a9" ></div>
+    <div class="folium-map" id="map_2afeecfffc864ab4a086b4b7cffcde9f" ></div>
 </body>
 <script>    
     
@@ -36,9 +36,9 @@
         var bounds = null;
     
 
-    var map_9d36dc4154f346368079114a96acf2a9 = L.map(
-        'map_9d36dc4154f346368079114a96acf2a9', {
-        center: [52.22977, 21.01178],
+    var map_2afeecfffc864ab4a086b4b7cffcde9f = L.map(
+        'map_2afeecfffc864ab4a086b4b7cffcde9f', {
+        center: [43.61092, 3.87723],
         zoom: 12,
         maxBounds: bounds,
         layers: [],
@@ -49,7 +49,7 @@
 
     
     
-    var tile_layer_765e1149775945f893b8cacd4c734092 = L.tileLayer(
+    var tile_layer_4f31cba675b649679a4fd0752367a7d0 = L.tileLayer(
         'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
         {
         "attribution": null,
@@ -61,37 +61,37 @@
         "opacity": 1,
         "subdomains": "abc",
         "tms": false
-}).addTo(map_9d36dc4154f346368079114a96acf2a9);
+}).addTo(map_2afeecfffc864ab4a086b4b7cffcde9f);
     
-        var marker_24ebe54668504699b3cb4a0952a929f0 = L.marker(
-            [52.22977, 21.01178],
+        var marker_b0ad788aa0744765bda41c620c273253 = L.marker(
+            [43.61092, 3.87723],
             {
                 icon: new L.Icon.Default()
                 }
-            ).addTo(map_9d36dc4154f346368079114a96acf2a9);
+            ).addTo(map_2afeecfffc864ab4a086b4b7cffcde9f);
         
     
 
-                var icon_e8db21ba52654456928fa12a6b31742c = L.AwesomeMarkers.icon({
+                var icon_403bc9a53c5c4496ae1d5e13100ad486 = L.AwesomeMarkers.icon({
                     icon: 'cloud',
                     iconColor: 'white',
                     markerColor: 'blue',
                     prefix: 'glyphicon',
                     extraClasses: 'fa-rotate-0'
                     });
-                marker_24ebe54668504699b3cb4a0952a929f0.setIcon(icon_e8db21ba52654456928fa12a6b31742c);
+                marker_b0ad788aa0744765bda41c620c273253.setIcon(icon_403bc9a53c5c4496ae1d5e13100ad486);
             
     
-            var popup_a7f0ea488f9542bc9d4b710e0738ea58 = L.popup({maxWidth: '300'
+            var popup_b0820306274245daa6dc0995125bd415 = L.popup({maxWidth: '300'
             
             });
 
             
-                var html_c25aebc927d6481b9af9f4a6c698f30d = $(`<div id="html_c25aebc927d6481b9af9f4a6c698f30d" style="width: 100.0%; height: 100.0%;">Warsaw</div>`)[0];
-                popup_a7f0ea488f9542bc9d4b710e0738ea58.setContent(html_c25aebc927d6481b9af9f4a6c698f30d);
+                var html_bc4c5676fffd49e39bfa3be706d725d4 = $(`<div id="html_bc4c5676fffd49e39bfa3be706d725d4" style="width: 100.0%; height: 100.0%;">Montpellier</div>`)[0];
+                popup_b0820306274245daa6dc0995125bd415.setContent(html_bc4c5676fffd49e39bfa3be706d725d4);
             
 
-            marker_24ebe54668504699b3cb4a0952a929f0.bindPopup(popup_a7f0ea488f9542bc9d4b710e0738ea58)
+            marker_b0ad788aa0744765bda41c620c273253.bindPopup(popup_b0820306274245daa6dc0995125bd415)
             ;
 
             
